--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "portifolio",
-  "version": "1.0.0",
-  "homepage": "Portifolio/" ,
+  "version": "1.0.1",
+  "homepage": "https://jhonatandbz.github.io/Portifolio",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,7 @@
     "url": "https://github.com/Jhonatandbz/Portifolio/issues"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yarm": "^0.4.0"
