--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "portifolio",
-  "version": "1.0.1",
-  "homepage": "https://jhonatandbz.github.io/Portifolio",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,13 +16,14 @@
   "bugs": {
     "url": "https://github.com/Jhonatandbz/Portifolio/issues"
   },
+  "homepage": "https://github.com/Jhonatandbz/Portifolio#readme",
   "dependencies": {
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yarm": "^0.4.0"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "vite": "^4.2.1"
   }
 }
