--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "portifolio",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github-username.github.io/Portifolio",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/Jhonatandbz/Portifolio/issues"
   },
-  "homepage": "https://github.com/Jhonatandbz/Portifolio#readme",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
