--- a/package.json
+++ b/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "portifolio",
-  "version": "1.0.0",
-  "description": "",
-  "homepage": "https://github-username.github.io/Portifolio",
-  "main": "index.js",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jhonatandbz/Portifolio.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Jhonatandbz/Portifolio/issues"
-  },
+  "name": "port",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "yarm": "^0.4.0"
+    "react-scripts": "5.0.1",
+    "vite": "^4.3.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "vite": "^4.2.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
