--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "port",
-  "homepage": "https://Jhonatandbz.github.io/Portifolio",
+  "homepage": "https://jhonatandbz.github.io/Portifolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
